Fix horizontal scroll on index.html
Delete footer as index.html extends basse.html

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -155,6 +155,7 @@ footer p u:hover {
 .about-us {
     background-image: linear-gradient(#ffcc99, #ffff66);
     height: 530px;
+    width: 100%;
 }
 
 .square {
